cards on mobile fixed

--- a/css/style.css
+++ b/css/style.css
@@ -3,8 +3,6 @@ html, body{
     padding: 0;
     width: 100%;
     height: 100%;
-
-
 }
 
 /* Cool efect of scrolling without bar */
@@ -14,20 +12,12 @@ body::-webkit-scrollbar {
 
 body{
     -ms-overflow-style: none;
-     scrollbar-width: none;
+    scrollbar-width: none;
 }
 
 #logoBox{
     background-color:black;
     color: black;
-}
-
-.below_top{
-    margin-top: 5%;
-}
-
-.header_align{
-    text-align: center;
 }
 
 
@@ -42,33 +32,27 @@ body{
     transition: 0.3s;
 }
 
-#about_body{
-    text-align: center;
-}
-
 .space_breaks{
     margin-top: 10%;
+    margin-bottom: 10%;
 }
 
 
-/* #companyLogo{
-    border: 4px solid red !important;
-} */
+
 @media (max-width: 1000px) {
-    .card{
-        margin-top: 5%;
-        width: 50%;
-    }
+
     #linkedin_image{
         width: 20%;
     }
 }
 
-@media (max-width: 550px) {
+/* Phones */
+@media (max-width: 575px) {
+
     .card{
-        margin-top: 5%;
-        width: 100%;
+        margin-bottom: 20px;
     }
+
     #linkedin_image{
         width: 30%;
     }
